Use more Java 5 features. Also fixed a test which failed randomly.
git-svn-id: https://svn.osgeo.org/geotools/geotools/trunk@27864 e5c1c795-43da-0310-a71f-fac65c449510